# serde-generic

./: Cargo.toml  LICENSE
serde_generic/: Cargo.toml  lib.rs  serde.rs
serde_generic/tests/: spec.rs  test.rs
serde_generic_derive/: Cargo.toml  lib.rs  serde.rs
serde_generic_derive/serde/: attr.rs  case.rs  ctxt.rs  name.rs  symbol.rs
